# bitirme

./: .claudeignore  .dockerignore  .env.example  .gitignore  3 Exog Strategy (Prophet-only - Weighted - Inverse-MAE) + RF & XGB (HP var).ipynb  303-104092-3-model-param-opt.ipynb  303-104092-New-Data(CSV)-Sarıma-Prohbet-Hybrids-Direct XGBoost with opt.ipynb  303-104092-Probhet-XGBoost-Hybrid.ipynb  Auto-Exog Forecast Best-MAE - Ensemble_Prohbet-Sarıma-Ets With RF _ XGB With Opt.ipynb  CLAUDE.md  Cluster0_AltKume2.csv  Cluster0_AltKume2_dikey.csv  Exog Ensemble Tuning + Sızıntısız-Kausal + PI.ipynb  OMS.py  Sales Forecast v5 — OMS Edition.ipynb  Sales Forecast v7_full.ipynb  Untitled2.ipynb  docker-compose.yml  justfile  model_accuracy_report.py  model_v3.py  motul_data_analysis.ipynb  panel_sales_orders_stock.csv  pipeline_exporter.py  pipeline_results.json  proje_ozeti.md  pytest.ini  requirements.txt  sku_config.csv  sku_profiler.py  v6_multi_sku.py — OMS Edition -- Speed-Pruned .ipynb  v6_multi_sku.py — OMS Edition(Probe→Escalate + REFIT Rollback, Speed-Pruned .ipynb  veri_matrisi_final_sales_orders_stock_calendar_lags_fx.csv  warehouse_report.py
controller/: Cargo.toml
controller/migrations/: 20260420120000_init_enums.down.sql  20260420120000_init_enums.up.sql  20260420120100_init_tables.down.sql  20260420120100_init_tables.up.sql  20260420120200_init_indexes.down.sql  20260420120200_init_indexes.up.sql  20260512120000_sku_run_predictions.down.sql  20260512120000_sku_run_predictions.up.sql  20260512200000_sku_active_pin.down.sql  20260512200000_sku_active_pin.up.sql  (+3 more)
(+234 files in other folders)
